[project]
name = "my_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = []
requires-python = ">= 3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
lsiwh37249-history = 'my_history.cli:query'

[tool.pdm]
distribution = true
